fix drop down menu covering part of hero image on screens below 400 i phone X and below

--- a/next_project/static/next_project/CSS/style.css
+++ b/next_project/static/next_project/CSS/style.css
@@ -115,6 +115,13 @@ nav a.active {
   }
 }
 
+@media screen and (max-width: 375px) {
+    body {
+        padding-top: 11rem; /* increase until the dropdown clears */
+    }
+}
+
+
 /* Center the last link if it’s alone in the row */
 .nav-links a:last-child {
   grid-column: 1 / -1; /* spans both columns */
